Import of DROLSKY/Alzabo-GUI-Mason-0.06 from CPAN.
gitpan-cpan-distribution: Alzabo-GUI-Mason
gitpan-cpan-version:      0.06
gitpan-cpan-path:         DROLSKY/Alzabo-GUI-Mason-0.06.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,12 @@
+0.06    2003-10-06
+
+- Add "pk" after primary key colums in column list.
+
+- The installer was ignoring the user-provided extension, and simply
+giving all files the default ".mhtml" extension.  Reported by Barry
+Hoggard.
+
+
 0.05    2003-10-04
 
 - Renamed to Alzabo::GUI::Mason.
