--- a/Changes
+++ b/Changes
@@ -1,3 +1,20 @@
+0.08    2003-10-17
+
+- Support for table attributes (with Alzabo 0.79_02 +).
+
+- Support for functional indexes (with Alzabo 0.79_02 +).
+
+- Improved the formatting of the front page's schema list when it
+expands to two columns.
+
+- Improved the formatting of the table and column name lists
+
+- Tried to make the installation process a little clearer,
+specifically in terms of saying what the component root is, since not
+all users are going to be previously familiar with Mason.  Suggested
+by Mark Stosberg.
+
+
 0.07    2003-10-08
 
 - Offer two styles of graph layout (neato & dot).
