--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+0.09    2003-10-20
+
+- Fixes so that the GUI still works with pre 0.79_02 versions of
+Alzabo.
+
+- Added a SIGNATURE file.
+
+
 0.08    2003-10-17
 
 - Support for table attributes (with Alzabo 0.79_02 +).
