Import of DROLSKY/Alzabo-GUI-Mason-0.11 from CPAN.
gitpan-cpan-distribution: Alzabo-GUI-Mason
gitpan-cpan-version:      0.11
gitpan-cpan-path:         DROLSKY/Alzabo-GUI-Mason-0.11.tar.gz
gitpan-cpan-author:       DROLSKY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,12 +1,27 @@
-0.10
+0.11
+
+- Setting the default to the string "''" from the web UI will make the
+  default an empty string at the Perl-level ('').
+
+- Modernized a bit so that it no longer reinvents quite so many
+  low-level wheels. Require a reasonably new Mason (1.10).
+
+- Made it work under Catalyst (sort of) or mod_perl.
+
+
+0.10    2004-06-29
 
 - If an Alzabo::Exception::RDBMSRules exception is thrown, the full
-exception (with stack trace) is now output to STDERR.  This helps
-debugging in case the exception is due to an error in Alzabo, as
-opposed to user error.
+  exception (with stack trace) is now output to STDERR.  This helps
+  debugging in case the exception is due to an error in Alzabo, as
+  opposed to user error.
 
 - Some submission handling components were redirecting to the wrong
-place after handling a RDBMSRules exception.
+  place after handling a RDBMSRules exception.
+
+- Expanded the size of the comment textarea fields.
+
+- Escape attributes in display.
 
 
 0.09    2003-10-20
@@ -24,14 +39,14 @@ Alzabo.
 - Support for functional indexes (with Alzabo 0.79_02 +).
 
 - Improved the formatting of the front page's schema list when it
-expands to two columns.
+  expands to two columns.
 
 - Improved the formatting of the table and column name lists
 
 - Tried to make the installation process a little clearer,
-specifically in terms of saying what the component root is, since not
-all users are going to be previously familiar with Mason.  Suggested
-by Mark Stosberg.
+  specifically in terms of saying what the component root is, since
+  not all users are going to be previously familiar with Mason.
+  Suggested by Mark Stosberg.
 
 
 0.07    2003-10-08
@@ -39,7 +54,7 @@ by Mark Stosberg.
 - Offer two styles of graph layout (neato & dot).
 
 - There were still a couple of spots using
-Alzabo::Config::mason_extension().  Reported by Barry Hoggard.
+  Alzabo::Config::mason_extension().  Reported by Barry Hoggard.
 
 
 0.06    2003-10-06
@@ -47,8 +62,8 @@ Alzabo::Config::mason_extension().  Reported by Barry Hoggard.
 - Add "pk" after primary key colums in column list.
 
 - The installer was ignoring the user-provided extension, and simply
-giving all files the default ".mhtml" extension.  Reported by Barry
-Hoggard.
+  giving all files the default ".mhtml" extension.  Reported by Barry
+  Hoggard.
 
 
 0.05    2003-10-04
