--- a/Changes
+++ b/Changes
@@ -1,4 +1,10 @@
-0.11
+0.12    2007-09-08
+
+- Missed a couple spots where I was using "old-style" redirects,
+  rather than something more modern.
+
+
+0.11    2007-08-25
 
 - Setting the default to the string "''" from the web UI will make the
   default an empty string at the Perl-level ('').
