--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.1201  2007-09-08
+
+- Fixed my stupid syntax errors that were in 0.12.
+
+
 0.12    2007-09-08
 
 - Missed a couple spots where I was using "old-style" redirects,
